--- a/frontend/src/app/components/shared/form-checkbox/form-checkbox.scss
+++ b/frontend/src/app/components/shared/form-checkbox/form-checkbox.scss
@@ -35,20 +35,20 @@
     justify-content: center;
     border: vars.$borde-brutal-thin;
     border-radius: vars.$radio-xs;
-    background-color: vars.$color-fondo-light;
-    box-shadow: 2px 2px 0px vars.$color-letra-oscura;
+    background-color: var(--bg-secondary);
+    box-shadow: 2px 2px 0px var(--border-color);
     transition: all vars.$transicion-rapida;
   }
 
   &__check {
     width: 14px;
     height: 14px;
-    color: vars.$color-letra-oscura;
+    color: var(--text-dark);
   }
 
   &__text {
     font-size: vars.$tamanio-fuente-texto-pequeno-m;
-    color: vars.$color-letra-oscura;
+    color: var(--text-primary);
     font-weight: 500;
   }
 
@@ -63,12 +63,12 @@
   // Estados
   &:not(.form-checkbox--disabled) &__label:hover &__box {
     transform: translate(-1px, -1px);
-    box-shadow: 3px 3px 0px vars.$color-letra-oscura;
+    box-shadow: 3px 3px 0px var(--border-color);
   }
 
   &--checked &__box {
-    background-color: vars.$color-primario-light;
-    border-color: vars.$color-letra-oscura;
+    background-color: var(--color-primary);
+    border-color: var(--border-color);
   }
 
   &--disabled {
